# z3rno-server

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  QUICKSTART.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml  server-image.yml
benchmarks/: README.md  _common.py  compose.override.yml  forge_burst.py  load_ramp.py  microbench.py  pentest.py  pg_sampler.sh  recall_load.py  run.sh  run_all.sh  seed.py  throughput.py
deploy/k8s/: job-template.yaml
loadtest/: README.md  docker-compose.loadtest.yml  locust_health_only.py  locust_read_heavy.py  locust_write_only.py  locustfile.py  run.sh  seed_loadtest.py
loadtest/cluster/: README.md  _check_targets.py  _seed_backlog.py  run-drainer.sh  run-eval.sh  run-failover.sh  run-smoke.sh  run-stress.sh  targets.json  teardown.sh
monitoring/grafana/provisioning/dashboards/: dashboards.yml  z3rno-overview.json
monitoring/prometheus/: prometheus.yml
scripts/: docker-entrypoint.sh  healthcheck.sh
src/z3rno_server/: __init__.py  config.py  dependencies.py  main.py
src/z3rno_server/api/: api_keys.py  audit.py  conversations.py  datasets.py  distill.py  feedback.py  forget_proof.py  graph.py  health.py  ingest.py  limits.py  memories.py  memories_stream.py  refine.py  search.py  sessions.py  tenants.py  tenants_admin.py  usage.py  worker.py
src/z3rno_server/middleware/: __init__.py  auth.py  body_limit.py  logging.py  org_context.py  rate_limit.py  rbac.py  request_id.py
src/z3rno_server/observability/: __init__.py  ingest_metrics.py  tracing.py
src/z3rno_server/schemas/: __init__.py  audit.py  conversations.py  datasets.py  distill.py  feedback.py  graph.py  ingest.py  memories.py  refine.py  search.py  shared.py  tenants.py
src/z3rno_server/workers/: __init__.py  audit_drain.py  audit_listener.py  celery_app.py  embeddings.py  forge.py  healthcheck.py  ingest.py  ingest_watchdog.py  lifecycle.py  queue_depth.py  refine.py
src/z3rno_server/workers/backends/: __init__.py  base.py  celery_backend.py  dispatch.py  k8s_backend.py  modal_backend.py
tests/: conftest.py  test_api_conversations.py  test_api_datasets.py  test_api_distill.py  test_api_feedback.py  test_api_graph.py  test_api_ingest.py  test_api_memories.py  test_api_refine.py  test_api_search.py  test_api_tenants.py  test_api_tenants_admin.py  test_api_usage.py  test_config.py  test_e2e.py  test_health.py  test_middleware_auth.py  test_middleware_request_id.py  test_phase_f_dispatch_backends.py  test_phase_g_observability.py  test_phase_g_read_routing.py  test_phase_g_recall_stream.py  test_schemas.py  test_security.py  test_workers_ingest.py  test_workers_refine.py
tests/load/: README.md  locustfile.py
(+2 files in other folders)
